--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,7 +73,7 @@ body {
         height:170px !important;
     }
     .texto-tabela {
-        font-size:x-small;
+        font-size:8px;
     }
     .input-qtde {
         width: 25px; text-align: center;
