--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,7 @@ body {
     height: 85px;
 }
 .texto-tabela {
-    font-size:medium;
+    font-size:medium;  
 }
 .texto-tabela-car {
     font-size:medium;
@@ -381,6 +381,7 @@ body {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
+    max-height: 50px;
 }
 
 .produtos-tabela th {
