--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,12 +19,15 @@ body {
     display: flex;
     place-content: space-between;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header h1 {
-    margin: 0;
+    margin: 0 auto;
     font-size: larger;
     font-weight: bolder;
+    flex: 1;
+    text-align: center;
 }
 
 .produtos {
@@ -154,6 +157,7 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: transform 0.2s;
+    text-align: right;
 }
 
 .carrinho-contador:hover {
